package org.jetbrains.kotlin.serialization;

import "google/protobuf/descriptor.proto";

option java_outer_classname = "ExtOptionsProtoBuf";
option java_generic_services = false; // Less code

extend google.protobuf.FieldOptions {
  optional bool skip_in_comparison = 50000;
  optional bool name_id_in_table = 50001;
  optional bool fq_name_id_in_table = 50002;
  optional bool string_id_in_table = 50003;
}
