/*
 * Copyright 2010-2015 JetBrains s.r.o.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package org.jetbrains.kotlin.generators.protobuf

import org.jetbrains.kotlin.generators.util.GeneratorsFileUtil
import org.jetbrains.kotlin.protobuf.Descriptors
import org.jetbrains.kotlin.serialization.DebugExtOptionsProtoBuf
import org.jetbrains.kotlin.serialization.DebugProtoBuf
import org.jetbrains.kotlin.serialization.js.DebugJsProtoBuf
import org.jetbrains.kotlin.serialization.jvm.DebugJvmProtoBuf
import org.jetbrains.kotlin.utils.Printer
import java.io.File
import java.util.*

class GenerateProtoBufCompare {
    companion object {
        val DEST_FILE: File = File("build-common/src/org/jetbrains/kotlin/incremental/ProtoCompareGenerated.kt")

        @JvmStatic
        fun main(args: Array<String>) {
            generate(DEST_FILE)
        }

        fun generate(destFile: File) {
            GeneratorsFileUtil.writeFileIfContentChanged(destFile, GenerateProtoBufCompare().generate())
        }
    }

    private val JAVA_TYPES_WITH_INLINED_EQUALS: EnumSet<Descriptors.FieldDescriptor.JavaType> = EnumSet.of(
            Descriptors.FieldDescriptor.JavaType.INT,
            Descriptors.FieldDescriptor.JavaType.LONG,
            Descriptors.FieldDescriptor.JavaType.FLOAT,
            Descriptors.FieldDescriptor.JavaType.DOUBLE,
            Descriptors.FieldDescriptor.JavaType.BOOLEAN,
            Descriptors.FieldDescriptor.JavaType.STRING,
            Descriptors.FieldDescriptor.JavaType.ENUM

    )

    private val RESULT_NAME = "result"
    private val STRING_INDEXES_NAME = "StringIndexes"
    private val CLASS_ID_INDEXES_NAME = "ClassIdIndexes"
    private val OLD_PREFIX = "old"
    private val NEW_PREFIX = "new"
    private val CHECK_EQUALS_NAME = "checkEquals"
    private val CHECK_STRING_EQUALS_NAME = "checkStringEquals"
    private val CHECK_CLASS_ID_EQUALS_NAME = "checkClassIdEquals"
    private val HASH_CODE_NAME = "hashCode"

    private val jvmExtensions = DebugJvmProtoBuf.getDescriptor().extensions
    private val jsExtensions = DebugJsProtoBuf.getDescriptor().extensions
    private val extensionsMap = (jvmExtensions + jsExtensions).groupBy { it.containingType }

    private val allMessages: MutableSet<Descriptors.Descriptor> = linkedSetOf()
    private val messagesToProcess: Queue<Descriptors.Descriptor> = LinkedList()
    private val repeatedFields: MutableSet<Descriptors.FieldDescriptor> = linkedSetOf()

    fun generate(): String {
        val sb = StringBuilder()
        val p = Printer(sb)
        p.println(File("license/LICENSE.txt").readText())
        p.printlnMultiline("""
            package org.jetbrains.kotlin.incremental
            
            import org.jetbrains.kotlin.name.ClassId
            import org.jetbrains.kotlin.serialization.ProtoBuf
            import org.jetbrains.kotlin.serialization.deserialization.NameResolver
            import org.jetbrains.kotlin.serialization.jvm.JvmProtoBuf
            import org.jetbrains.kotlin.serialization.js.JsProtoBuf
            import org.jetbrains.kotlin.utils.Interner
            import java.util.*
            
            /** This file is generated by org.jetbrains.kotlin.generators.protobuf.GenerateProtoBufCompare. DO NOT MODIFY MANUALLY */
            open class ProtoCompareGenerated(val oldNameResolver: NameResolver, val newNameResolver: NameResolver) {
                private val strings = Interner<String>()
                val $OLD_PREFIX${STRING_INDEXES_NAME}Map: MutableMap<Int, Int> = hashMapOf()
                val $NEW_PREFIX${STRING_INDEXES_NAME}Map: MutableMap<Int, Int> = hashMapOf()
                val $OLD_PREFIX${CLASS_ID_INDEXES_NAME}Map: MutableMap<Int, Int> = hashMapOf()
                val $NEW_PREFIX${CLASS_ID_INDEXES_NAME}Map: MutableMap<Int, Int> = hashMapOf()

                private val classIds = Interner<ClassId>()
        """.trimIndent())
        p.pushIndent()

        val fileDescriptor = DebugProtoBuf.getDescriptor()

        addMessageToProcessIfNeeded(fileDescriptor.findMessageTypeByName("Package"))
        addMessageToProcessIfNeeded(fileDescriptor.findMessageTypeByName("Class"))
        val generateDifference = allMessages.toSet()

        while (messagesToProcess.isNotEmpty()) {
            p.println()

            val message = messagesToProcess.poll()
            generateForMessage(message, p)

            if (message in generateDifference) {
                generateDiffForMessage(message, p)
            }
        }

        repeatedFields.forEach { generateHelperMethodForRepeatedField(it, p) }

        p.println()
        generateAuxiliaryMethods(p)

        p.popIndent()
        p.println("}")

        allMessages.forEach { generateHashCodeFun(it, p) }

        return sb.toString()
    }

    fun generateAuxiliaryMethods(p: Printer) {
        p.printlnMultiline("""
            fun oldGetIndexOfString(index: Int): Int = getIndexOfString(index, oldStringIndexesMap, oldNameResolver)
            fun newGetIndexOfString(index: Int): Int = getIndexOfString(index, newStringIndexesMap, newNameResolver)

            fun getIndexOfString(index: Int, map: MutableMap<Int, Int>, nameResolver: NameResolver): Int {
                map[index]?.let { return it }

                val result = strings.intern(nameResolver.getString(index))
                map[index] = result
                return result
            }

            fun oldGetIndexOfClassId(index: Int): Int = getIndexOfClassId(index, oldClassIdIndexesMap, oldNameResolver)
            fun newGetIndexOfClassId(index: Int): Int = getIndexOfClassId(index, newClassIdIndexesMap, newNameResolver)

            fun getIndexOfClassId(index: Int, map: MutableMap<Int, Int>, nameResolver: NameResolver): Int {
                map[index]?.let { return it }

                val result = classIds.intern(nameResolver.getClassId(index))
                map[index] = result
                return result
            }

            private fun $CHECK_STRING_EQUALS_NAME(old: Int, new: Int): Boolean {
               return oldGetIndexOfString(old) == newGetIndexOfString(new)
            }

            private fun $CHECK_CLASS_ID_EQUALS_NAME(old: Int, new: Int): Boolean {
               return oldGetIndexOfClassId(old) == newGetIndexOfClassId(new)
            }
        """)

    }

    fun generateHashCodeFun(descriptor: Descriptors.Descriptor, p: Printer) {
        val typeName = descriptor.typeName

        val fields = descriptor.fields.filter { !it.isSkip }
        val extFields = extensionsMap[descriptor]?.filter { !it.isSkip } ?: emptyList()

        p.println()
        p.println("fun $typeName.$HASH_CODE_NAME(stringIndexes: (Int) -> Int, fqNameIndexes: (Int) -> Int): Int {")
        p.pushIndent()

        p.println("var $HASH_CODE_NAME = 1")
        fields.forEach { field -> generateHashCodeForField(field, p, false) }
        extFields.forEach { field -> generateHashCodeForField(field, p, true) }
        p.println()
        p.println("return $HASH_CODE_NAME")

        p.popIndent()
        p.println("}")
    }

    fun generateHashCodeForField(field: Descriptors.FieldDescriptor, p: Printer, isExtensionField: Boolean) {
        val fieldName = field.name.javaName
        val capFieldName = fieldName.capitalize()
        val outerClassName = field.file.options.javaOuterClassname.removePrefix("Debug")
        val fullFieldName = "$outerClassName.$fieldName"

        val upperBound = if (isExtensionField) "getExtensionCount($fullFieldName)" else "${fieldName}Count"
        val hasMethod = if (isExtensionField) "hasExtension($fullFieldName)" else "has$capFieldName()"
        val fieldValue = if (isExtensionField) "getExtension($fullFieldName)" else fieldName
        val repeatedFieldValue = if (isExtensionField) "getExtension($fullFieldName, i)" else "get$capFieldName(i)"

        p.println()
        if (field.isRepeated) {
            p.println("for(i in 0..$upperBound - 1) {")
            p.println("    $HASH_CODE_NAME = 31 * $HASH_CODE_NAME + ${fieldToHashCode(field, repeatedFieldValue)}")
            p.println("}")

        }
        else if (field.isRequired) {
            p.println("$HASH_CODE_NAME = 31 * $HASH_CODE_NAME + ${fieldToHashCode(field, fieldValue)}")
        }
        else if (field.isOptional) {
            p.println("if ($hasMethod) {")
            p.println("    $HASH_CODE_NAME = 31 * $HASH_CODE_NAME + ${fieldToHashCode(field, fieldValue)}")
            p.println("}")
        }
    }

    fun generateForMessage(descriptor: Descriptors.Descriptor, p: Printer) {
        val typeName = descriptor.typeName

        val fields = descriptor.fields.filter { !it.isSkip }
        val extFields = extensionsMap[descriptor]?.filter { !it.isSkip } ?: emptyList()

        p.println("open fun $CHECK_EQUALS_NAME(old: $typeName, new: $typeName): Boolean {")
        p.pushIndent()

        fields.forEach { field -> FieldGeneratorImpl(field, p).generate() }
        extFields.forEach { field -> ExtFieldGeneratorImpl(field, p).generate() }

        p.println("return true")

        p.popIndent()
        p.println("}")
    }

    fun generateDiffForMessage(descriptor: Descriptors.Descriptor, p: Printer) {
        val typeName = descriptor.typeName
        val className = typeName.replace(".", "")

        val fields = descriptor.fields.filter { !it.isSkip }
        val extFields = extensionsMap[descriptor]?.filter { !it.isSkip } ?: emptyList()
        val allFields = fields + extFields

        p.printlnMultiline("""
            enum class ${className}Kind {
                ${allFields.joinToString(",\n                ") { it.enumName }}
            }

            fun difference(old: $typeName, new: $typeName): EnumSet<${className}Kind> {
                val $RESULT_NAME = EnumSet.noneOf(${className}Kind::class.java)

        """)

        p.pushIndent()
        fields.forEach { field -> FieldGeneratorForDiff(field, p).generate() }
        extFields.forEach { field -> ExtFieldGeneratorForDiff(field, p).generate() }
        p.popIndent()

        p.printlnMultiline("""
                return $RESULT_NAME
            }
        """)
    }

    fun generateHelperMethodForRepeatedField(field: Descriptors.FieldDescriptor, p: Printer) {
        assert(field.isRepeated) { "expected repeated field: ${field.name}" }

        val typeName = field.containingType.typeName
        val fieldName = field.name.javaName
        val capFieldName = fieldName.capitalize()
        val methodName = field.helperMethodName()

        p.println()
        p.printlnMultiline("""
            open fun $methodName(old: $typeName, new: $typeName): Boolean {
                if (old.${fieldName}Count != new.${fieldName}Count) return false

                for(i in 0..old.${fieldName}Count - 1) {
                    if (${compareExpr(field, "get$capFieldName(i)")}) return false
                }

                return true
            }
        """)
    }

    abstract inner class FieldGenerator(val field: Descriptors.FieldDescriptor, val p: Printer) {
        val statement = field.getStatement()

        abstract fun Descriptors.FieldDescriptor.getStatement(): String

        fun generate() {
            if (field.isRepeated) {
                printRepeatedField()
            }
            else if (field.isRequired) {
                printRequiredField()
            }
            else if (field.isOptional) {
                printOptionalField()
            }

            p.println()

            addMessageTypeToProcessIfNeeded(field)
        }

        abstract fun printRepeatedField()

        abstract fun printRequiredField()

        abstract fun printOptionalField()
    }

    open inner class FieldGeneratorImpl(field: Descriptors.FieldDescriptor, p: Printer) : FieldGenerator(field, p) {
        val fieldName = field.name.javaName
        val capFieldName = fieldName.capitalize()

        override fun printRepeatedField() {
            repeatedFields.add(field)
            p.println("if (!${field.helperMethodName()}(old, new)) $statement")
        }

        override fun printRequiredField() {
            p.println("if (${compareExpr(field, fieldName)}) $statement")
        }

        override fun printOptionalField() {
            p.printlnMultiline("""
                if (old.has$capFieldName() != new.has$capFieldName()) $statement
                if (old.has$capFieldName()) {
                    if (${compareExpr(field, fieldName)}) $statement
                }
            """)
        }

        override fun Descriptors.FieldDescriptor.getStatement(): String = "return false"
    }

    open inner class ExtFieldGeneratorImpl(field: Descriptors.FieldDescriptor, p: Printer) : FieldGenerator(field, p) {
        val outerClassName = field.file.options.javaOuterClassname.removePrefix("Debug")
        val fieldName = field.name.javaName
        val fullFieldName = "$outerClassName.$fieldName"

        override fun printRepeatedField() {
            p.printlnMultiline("""
                if (old.getExtensionCount($fullFieldName) != new.getExtensionCount($fullFieldName)) {
                    $statement
                }
                else {
                    for(i in 0..old.getExtensionCount($fullFieldName) - 1) {
                        if (${compareExpr(field, "getExtension($fullFieldName, i)")}) $statement
                    }
                }
            """)
        }

        override fun printRequiredField() {
            p.println("if (${compareExpr(field, "getExtension($fullFieldName)")}) $statement")
        }

        override fun printOptionalField() {
            p.printlnMultiline("""
                if (old.hasExtension($fullFieldName) != new.hasExtension($fullFieldName)) $statement
                if (old.hasExtension($fullFieldName)) {
                    if (${compareExpr(field, "getExtension($fullFieldName)")}) $statement
                }
            """)
        }

        override fun Descriptors.FieldDescriptor.getStatement(): String = "return false"
    }

    inner class FieldGeneratorForDiff(field: Descriptors.FieldDescriptor, p: Printer) : FieldGeneratorImpl(field, p) {
        override fun Descriptors.FieldDescriptor.getStatement(): String = statementForDiff
    }

    inner class ExtFieldGeneratorForDiff(field: Descriptors.FieldDescriptor, p: Printer) : ExtFieldGeneratorImpl(field, p) {
        override fun Descriptors.FieldDescriptor.getStatement(): String =  statementForDiff
    }

    private val Descriptors.FieldDescriptor.statementForDiff: String
        get() = "$RESULT_NAME.add(${containingType.typeName.replace(".", "")}Kind.$enumName)"

    private val Descriptors.FieldDescriptor.isSkip: Boolean
        get() = options.getExtension(DebugExtOptionsProtoBuf.skipInComparison)

    private fun addMessageTypeToProcessIfNeeded(field: Descriptors.FieldDescriptor) {
        if (field.javaType == Descriptors.FieldDescriptor.JavaType.MESSAGE) {
            addMessageToProcessIfNeeded(field.messageType)
        }
    }

    private fun addMessageToProcessIfNeeded(descriptor: Descriptors.Descriptor) {
        if (descriptor !in allMessages) {
            allMessages.add(descriptor)
            messagesToProcess.add(descriptor)
        }
    }

    fun compareExpr(field: Descriptors.FieldDescriptor, expr: String) =
            when {
                field.options.getExtension(DebugExtOptionsProtoBuf.stringIdInTable) ||
                field.options.getExtension(DebugExtOptionsProtoBuf.nameIdInTable) ->
                    "!$CHECK_STRING_EQUALS_NAME(old.$expr, new.$expr)"
                field.options.getExtension(DebugExtOptionsProtoBuf.fqNameIdInTable) ->
                    "!$CHECK_CLASS_ID_EQUALS_NAME(old.$expr, new.$expr)"
                field.javaType in JAVA_TYPES_WITH_INLINED_EQUALS ->
                    "old.$expr != new.$expr"
                else ->
                    "!$CHECK_EQUALS_NAME(old.$expr, new.$expr)"
            }

    private fun fieldToHashCode(field: Descriptors.FieldDescriptor, expr: String): String =
        when {
            field.options.getExtension(DebugExtOptionsProtoBuf.stringIdInTable) ||
            field.options.getExtension(DebugExtOptionsProtoBuf.nameIdInTable) ->
                "stringIndexes($expr)"
            field.options.getExtension(DebugExtOptionsProtoBuf.fqNameIdInTable) ->
                "fqNameIndexes($expr)"
            field.javaType == Descriptors.FieldDescriptor.JavaType.INT ->
                "$expr"
            field.javaType in JAVA_TYPES_WITH_INLINED_EQUALS ->
                "$expr.$HASH_CODE_NAME()"
            else ->
                "$expr.$HASH_CODE_NAME(stringIndexes, fqNameIndexes)"
        }

    private val Descriptors.Descriptor.typeName: String
        get() {
            val outerClassName = file.options.javaOuterClassname.removePrefix("Debug")
            val packageHeader = file.`package`
            return outerClassName + fullName.removePrefix(packageHeader)
        }

    private val Descriptors.FieldDescriptor.enumName: String
            get() {
                var extensionPrefix = ""
                if (isExtension) {
                    if (this in jvmExtensions) {
                        extensionPrefix = "jvmExt_"
                    }
                    if (this in jsExtensions) {
                        extensionPrefix = "jsExt_"
                    }
                }
                return (extensionPrefix + name.javaName + (if (isRepeated) "List" else "")).replace("[A-Z]".toRegex()) { "_" + it.value }.toUpperCase()
            }

    private fun Descriptors.FieldDescriptor.helperMethodName(): String {
        val packageHeader = this.file.`package`
        val descriptor = this.containingType
        val className = descriptor.fullName.removePrefix(packageHeader).replace(".", "")
        val capFieldName = this.name.javaName.capitalize()
        return "$CHECK_EQUALS_NAME$className$capFieldName"
    }

    private val String.javaName: String
        get() = this.split("_").joinToString("") { it.capitalize() }.decapitalize()
}

private fun Printer.printlnMultiline(string: String) {
    string.trimIndent().split("\n").forEach {
        if (it.isBlank()) {
            this.println()
        }
        else {
            this.println(it)
        }
    }
}